[gd_scene load_steps=17 format=2]

[ext_resource path="res://Art/random_box.png" type="Texture" id=1]
[ext_resource path="res://Art/tickicon.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Bumpo.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Styles/Buttons/CenterButtons/center_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Styles/Buttons/CenterButtons/center_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://Art/coinIcon.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Product2Button.gd" type="Script" id=11]
[ext_resource path="res://Art/background_textures/templates/0.png" type="Texture" id=14]


[sub_resource type="StyleBoxTexture" id=1]
resource_local_to_scene = true
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1265, 1265 )

[sub_resource type="StyleBoxTexture" id=2]
resource_local_to_scene = true
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1265, 1265 )
modulate_color = Color( 0.823529, 0.823529, 0.823529, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=4]
resource_local_to_scene = true
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1265, 1265 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 1
outline_color = Color( 0.0392157, 0.521569, 0.160784, 1 )
use_filter = true
extra_spacing_top = 6
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 1
use_filter = true
extra_spacing_top = 6
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Product2Button" type="Button"]
margin_right = 150.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 160 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InActiveIcon" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 1.0
mouse_filter = 0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="InActiveIcon"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -33.0
margin_right = -2.0
margin_bottom = -1.0
rect_min_size = Vector2( 149, 30 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="InActiveIcon/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_left = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="price" type="Label" parent="InActiveIcon/Button/MarginContainer"]
margin_left = 61.0
margin_right = 102.0
margin_bottom = 32.0
size_flags_horizontal = 6
size_flags_vertical = 5
custom_fonts/font = SubResource( 7 )
custom_colors/font_outline_modulate = Color( 0.0392157, 0.521569, 0.160784, 1 )
text = "300"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InActiveIcon/Button/MarginContainer/price"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -11.5
margin_right = -4.0
margin_bottom = 11.5
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedIcon" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="SelectedIcon"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -37.9439
margin_top = 4.2245
margin_right = -4.94389
margin_bottom = 37.2245
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="." to="." method="_on_ProductButton_pressed"]
[connection signal="pressed" from="InActiveIcon/Button" to="." method="_on_Button_pressed"]
